# ncp

./: Cargo.toml  README.md  a.out  main.nar  main.nere  test.nar
examples/: main.nar  main.nere  script.nar  script.nere
src/lib/nere_internal/: Cargo.toml
src/lib/nere_internal/src/: disassembler.rs  lexer.rs  nere_internal.rs  timer.rs
test/: a.out  main.nar  main.nere  script.nar  while.nar  while.nere
